--- a/source/public/css/application.css
+++ b/source/public/css/application.css
@@ -1,14 +1,123 @@
 body {
-  background-color: #222;
+  background-color: #042E50;
+  font-family: 'Special Elite', sans-serif;
 }
 
 .container {
   margin: 20px auto;
-  width: 80%;
-  padding: 20px;
+  width: 600px;
+  padding: 1px 20px 20px 20px;
+  border-radius: 2px;
   background-color: white;
 }
 
 th {
   text-align: left;
+}
+
+button {
+  width: 100px;
+  margin: 20px 0 0 0;
+  background-color: #E65F17;
+  color: white;
+  border: none;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+button:hover {
+  background-color: #E6AE17;
+}
+
+#new-post > input, textarea {
+  box-sizing: border-box;
+  width:100%;
+  margin: 20px 0 0 0;
+  padding: 10px;
+}
+
+.login {
+  box-sizing: border-box;
+  margin-top: 24px;
+  display: inline-block;
+  vertical-align: top;
+  padding: 0 50px;
+}
+
+.login:last-child {
+  border-left: 2px solid #042E50;
+}
+
+
+.login-form > input {
+  box-sizing: border-box;
+  margin: 20px 0 0 0;
+  padding: 10px;
+  display: block;
+}
+
+.header {
+  margin: 30px 50px;
+  font-size: 1.6em;
+  position: relative;
+}
+
+.header h1, .header a {
+  font-family: 'Ribeye Marrow', cursive;
+  color: #E6AE17;
+  text-decoration: none;
+}
+
+.header > * {
+  margin: 0;
+  display: inline-block;
+}
+.header img {
+  height: 90px;
+}
+#logout {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+#logout > * {
+  font-size: 0.6em;
+  color: #E6AE17;
+  float: right;
+  text-decoration: none;
+  margin: 0;
+  padding: 0;
+}
+
+.comment {
+  margin: 20px auto;
+  width: 96%;
+  padding: 1px 10px;
+  border-radius: 2px;
+  background-color: #F6DE9C;
+}
+
+.post-body {
+  font-size: 1.2em;
+}
+
+.comment-body {
+  margin-left: 24px;
+  font-size: 1em;
+}
+
+.comment-timestamp {
+  text-align: right;
+  font-size: .8em;
+}
+
+#new-comment textarea {
+  margin: 0;
+}
+
+.error {
+  width: 150px;
+  color: red;
+  font-size: .7em;
 }
