--- a/source/app/views/index.erb
+++ b/source/app/views/index.erb
@@ -1,3 +1,8 @@
 <div class="container">
-
+  <ol>
+    <% @surveys.each do |survey| %>
+    <li><a href="/surveys/<%= survey.id %>"><%= survey.name %></a></li>
+    <% end %>
+  </ol>
+  <a href="/surveys/new">Create a Survey!</a>
 </div>
