--- a/source/app/views/layout.erb
+++ b/source/app/views/layout.erb
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="/css/application.css">
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script src="/js/application.js"></script>
-
+  <%= yield_content :script %>
   <title></title>
 </head>
 <body>
