--- a/source/app/views/index.erb
+++ b/source/app/views/index.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <ol>
     <% @surveys.each do |survey| %>
-    <li><a href="/surveys/<%= survey.id %>"><%= survey.name %></a></li>
+    <li><a href="/surveys/<%= survey.id %>"><%= survey.title %></a></li>
     <% end %>
   </ol>
   <a href="/surveys/new">Create a Survey!</a>
