isolates survey builder styles to survey_builder.css

--- a/source/app/views/surveys/new.erb
+++ b/source/app/views/surveys/new.erb
@@ -18,5 +18,9 @@
 
 
 <% content_for :script do %>
-<script src="/js/survey_builder.js"></script>
+  <script src="/js/survey_builder.js"></script>
+<% end %>
+
+<% content_for :style do %>
+  <link rel="stylesheet" href="/css/survey_builder.css"/>
 <% end %>
