--- a/source/app/views/layout.erb
+++ b/source/app/views/layout.erb
@@ -5,6 +5,7 @@
   <link href='http://fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="/css/normalize.css">
   <link rel="stylesheet" href="/css/application.css">
+  <%= yield_content :style %>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script src="/js/application.js"></script>
   <%= yield_content :script %>
