--- a/source/public/css/application.css
+++ b/source/public/css/application.css
@@ -15,7 +15,7 @@ th {
   text-align: left;
 }
 
-button {
+button, .button {
   width: 100px;
   margin: 10px 0 0 0;
   background-color: #E65F17;
@@ -25,7 +25,7 @@ button {
   border-radius: 5px;
 }
 
-button:hover {
+button:hover, .button:hover {
   background-color: #E6AE17;
 }
 
