--- a/source/public/css/survey_builder.css
+++ b/source/public/css/survey_builder.css
@@ -19,3 +19,68 @@
   border-radius: 10px;
   /*line-height: 10px;*/
 }
+
+form {
+  position:relative;
+  margin-bottom: 70px;
+}
+
+ol {
+  border-top: 2px solid #042E50;
+  margin-bottom: 0;
+}
+
+div .bottom-border{
+  border-bottom: 2px solid #042E50;
+  margin-top: 20px;
+}
+
+ol > li {
+  border-bottom: 2px solid #042E50;
+  width: 550px;
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+}
+
+ol > li:first-child {
+  margin-top: 0;
+  padding-top: 20px;
+}
+
+ol > li:last-child {
+  margin-bottom: 0;
+}
+
+input {
+  box-sizing: border-box;
+  padding: 4px;
+  margin-top: 8px;
+}
+
+.survey-title {
+  width: 400px;
+}
+
+ul {
+  padding-left: 20px;
+}
+
+.question {
+  width: 420px;
+}
+
+.option {
+  width: 400px;
+}
+
+.add-question {
+  margin-left: 40px;
+  width: 420px;
+}
+
+#create-survey {
+  position: absolute;
+  right: 0;
+  width: 200px;
+  height: 60px;
+}
