--- a/source/public/css/survey_builder.css
+++ b/source/public/css/survey_builder.css
@@ -1,23 +1,12 @@
 .remove-button {
   width: 20px;
-  margin: 0;
-  background-color: white;
-  color: red;
-  border: none;
-  padding: 0;
-  border-radius: 10px;
-  /*line-height: 10px;*/
+  background-color: transparent;
+  color: #E65F17;
 }
 
 .remove-button:hover {
-  width: 20px;
-  margin: 0;
-  background-color: white;
-  color: red;
-  border: none;
-  padding: 0;
-  border-radius: 10px;
-  /*line-height: 10px;*/
+  background-color: transparent;
+  color: #E6AE17;
 }
 
 form {
