added signup functionality

--- a/source/app/views/_header.erb
+++ b/source/app/views/_header.erb
@@ -23,10 +23,10 @@
         </form>
       </div>
       <div id="signup">
-        <form action='/sessions' method="post">
-          <input type='text' placeholder='username' name='login[username]'>
-          <input type='password' placeholder='password' name='login[password]'>
-          <input type='password' placeholder='confirm password' name='login[password_confirmation]'>
+        <form action='/users' method="post">
+          <input type='text' placeholder='username' name='signup[username]'>
+          <input type='password' placeholder='password' name='signup[password]'>
+          <input type='password' placeholder='confirm password' name='signup[password_confirmation]'>
           <input type='submit' value="Join the Otters">
           <a href="/">cancel</a>
         </form>
