resolved merge conflit in surveys_controller. Moved survey_builder to helpers.

--- a/source/app/views/surveys/show.erb
+++ b/source/app/views/surveys/show.erb
@@ -10,6 +10,8 @@
 			</ul><br>
 		<% end %>
 	</ol>
+	<!-- add sessions check here -->
+	<a href="surveys/"><button>Take this Survey!</button></a>
 </div>
 
 <% content_for :style do %>
