take survey page now only accessible if user logged in. no take functionality yet.

--- a/source/app/views/index.erb
+++ b/source/app/views/index.erb
@@ -7,6 +7,6 @@
   <% if session[:user_id] != nil %>
   <a href="/surveys/new">Create a Survey!</a>
   <% else %>
-  <p>Log in to create a survey!</p>
+  <p>Log in to create or take a survey! (The links are inactive otherwise.)</p>
   <% end %>
 </div>
