--- a/source/public/css/application.css
+++ b/source/public/css/application.css
@@ -30,12 +30,8 @@ th {
   padding: 0;
 }
 
-/*#user {
-  display: none;
-}*/
-
 #user-box button {
-  float: right;
+  display: inline-block;
 }
 
 button {
@@ -57,7 +53,7 @@ button:hover {
   margin: 20px 0 0 0;
   padding: 10px;
 }
-
+/*
 .login {
   box-sizing: border-box;
   margin-top: 24px;
@@ -77,7 +73,7 @@ button:hover {
   padding: 10px;
   display: block;
 }
-
+*/
 .header {
   margin: 30px 50px;
   font-size: 1.6em;
@@ -124,17 +120,17 @@ button:hover {
   margin: 0;
 }
 
-.error {
-  width: 150px;
+.errors {
+  width: 160px;
   color: red;
-  font-size: .7em;
+  font-size: .9em;
+  margin-bottom: 5px;
 }
 
 
 #login {
   display: none;
   background-color: #6A92D4;
-  padding: 10px;
   border-radius: 5px;
 }
 
@@ -144,11 +140,17 @@ button:hover {
 }
 
 #login input:nth-child(2) {
+  display: inline-block;
+}
+
+#login input:nth-child(3) {
   display: block;
 }
 
-#login input:last-child {
-  display: inline-block;
+#login a {
+  float: right;
+  margin-bottom: 25px;
+  padding-right: 5px;
 }
 
 #signup {
@@ -168,8 +170,14 @@ button:hover {
   display: inline-block;
 }
 
-#sigup form > * {
-  margin-bottom: 10px;
+#signup a {
+  float: right;
+  margin-right: 5px;
+}
+
+input {
+  margin: 5px;
+  padding: 3px;
 }
 
 #non-user button {
@@ -180,3 +188,6 @@ button:hover {
   margin-right: none;
 }
 
+#non-user p {
+  margin-bottom: 5px;
+}
