changed some css

--- a/source/public/css/application.css
+++ b/source/public/css/application.css
@@ -129,8 +129,10 @@ button:hover {
 
 
 #login {
+  float: right;
   display: none;
   background-color: #6A92D4;
+  padding: 10px;
   border-radius: 5px;
 }
 
@@ -145,12 +147,12 @@ button:hover {
 
 #login input:nth-child(3) {
   display: block;
+  margin: 0px;
 }
 
 #login a {
   float: right;
-  margin-bottom: 25px;
-  padding-right: 5px;
+  margin-right: 5px;;
 }
 
 #signup {
@@ -163,11 +165,15 @@ button:hover {
 
 #signup input:nth-child(3) {
   display: block;
-
 }
 
 #signup input:last-child {
   display: inline-block;
+}
+
+#signup form > * {
+  display: inline-block;
+  margin-bottom: 5px;
 }
 
 #signup a {
