modified schema so that response belongs to question

--- a/source/app/views/_header.erb
+++ b/source/app/views/_header.erb
@@ -7,6 +7,7 @@
         <form action='/sessions/<%=session[:user_id]%>' method="get">
           <input type='submit' value="logout">
         </form>
+        <a href='/users/<%=session[:user_id]%>'><button>my surveys</button></a>
       </div>
     <% else %>
       <div id="non-user">
