--- a/source/public/css/application.css
+++ b/source/public/css/application.css
@@ -16,9 +16,10 @@ body {
 }
 
 .container {
+  box-sizing: border-box;
   margin: 0 auto;
-  width: 1000px;
-  padding: 1px 0px 20px 0px;
+  width: 1010px;
+  padding: 0 40px 20px 40px;
   border-radius: 2px;
   background-color: white;
   /*color: #E6AE17;*/
@@ -48,7 +49,7 @@ th {
   display: inline-block;
 }
 
-button {
+button, .button {
   width: 100px;
   background-color: #E65F17;
   color: white;
@@ -57,7 +58,7 @@ button {
   border-radius: 5px;
 }
 
-button:hover {
+button:hover, .button:hover {
   background-color: #E6AE17;
 }
 
