--- a/source/public/css/survey_builder.css
+++ b/source/public/css/survey_builder.css
@@ -23,7 +23,6 @@ ol {
 
 div .bottom-border{
   border-bottom: 2px solid #042E50;
-  margin-top: 20px;
 }
 
 ol > li {
@@ -65,7 +64,7 @@ ul {
 }
 
 .add-question {
-  margin-left: 40px;
+  margin: 20px 40px 20px 0;
   width: 420px;
 }
 
