--- a/source/app/views/surveys/show.erb
+++ b/source/app/views/surveys/show.erb
@@ -11,11 +11,11 @@
 				</ul><br>
 			<% end %>
 		</ol>
-		<input type="submit" value="Submit!">
+		<input class='button' type="submit" value="Submit!">
 	</form>
 </div>
 
 
 <% content_for :style do %>
-  <link rel="stylesheet" href="/css/survey_builder.css"/>
+  <link rel="stylesheet" href="/css/survey_taker.css"/>
 <% end %>
