--- a/source/public/css/application.css
+++ b/source/public/css/application.css
@@ -152,6 +152,7 @@ button:hover, .button:hover {
   background-color: #6A92D4;
   padding: 10px;
   border-radius: 5px;
+  background-color:rgba(0,0,0,0);
 }
 
 #login form > * {
